fix/ image stretch

--- a/frontend/src/components/AlbumCard/AlbumCard.module.scss
+++ b/frontend/src/components/AlbumCard/AlbumCard.module.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   height: 288px;
   max-width: 266px;
+  max-height:309px;
   width: 100%;
   display: flex;
   flex-direction: column;
